--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
         Stylesheet
 </head>
 
+
 .Brown {
     background-color: #B38B59;
 }
@@ -30,17 +31,8 @@
     background-color: #FCA311;
 }
 
-.section content{
-    width: 100%;
-    background-color: #FCA311;
-}
+<-------------- css
 
-.div header {
-    width:100%;
-    background-color: #000;
-}
-
-.Header h1{
     color: #000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Jacques Francois;
@@ -49,8 +41,53 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 1.4px;
-    text-transform: capitalize;}
+    text-transform: capitalize;
 
-.About-Active {
-    color:gold;
+
+    background: rgba(255, 203, 116); 
+    clear: both;
+    height: 75px;
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color:(gold);
+    overflow: hidden;
 }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #000;
+    text-align: center;
+    padding: 14px 16px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Jacques Francois;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 1.4px;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.topnav a.active {
+  color: gold;
+  color: white;
+}
+
+.topnav-right {
+  float: right;
+}
+
+.image-center {
+    align-items: center;
+}
+
+.footernav {
+    display: inline-block;
+    list-style-type: none;
+    float: right;
+}
+
+
