--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,98 +1,116 @@
-<head>
-        Stylesheet
-</head>
+header {
+    display: flex;
+    background-color:rgba(255, 203, 116, 0.2);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset, 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
-
-.Brown {
-    background-color: #B38B59;
-}
-.Mossgreen {
-    background-color:#113E21 ;
-}
-.Metallicwhite {
-    background-color: #F0F0F0;
-}
-.White {
-    background-color: #FEFEFE;
-}
-.black {
-    background-color: #1C1C1C ;
-}
-.Flesh {
-    background-color: #FDE4C3;
-}
-.Yellow {
-    background-color: #FFCB74;
-}
-.Gold {
-    background-color: #FCB318;
-}
-.Orange {
-    background-color: #FCA311;
 }
 
-<-------------- css
+body { 
+    background-color: rgba(255, 203, 116, 0.2);
+    width: 100%;
+    height:fit-content;
+}
+.inline-block-and-logo {
+    display: inline;
+    list-style-type: none;
+}
+.topnavli {
+    display: inline;
 
+}
+
+
+a {
     color: #000;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Jacques Francois;
-    font-size: 28px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    letter-spacing: 1.4px;
-    text-transform: capitalize;
-
-
-    background: rgba(255, 203, 116); 
-    clear: both;
-    height: 75px;
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color:(gold);
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    color: #000;
-    text-align: center;
-    padding: 14px 16px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: Jacques Francois;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 1.4px;
+    letter-spacing: 1px;
     text-transform: capitalize;
     text-decoration: none;
 }
-#ProfilePicture2 {
-   display: flex;
-   justify-content: center;
+
+a:link {
+    text-decoration: none;
 }
-.Center-content {
-    text-align: center;
-}
-.topnav-right {
-  float: right;
+li {
+    list-style-type: none;
 }
 
-.image-center {
-    align-items: center;
-}
-.linkedin {
-    padding:0px;
-}
-.footernav {
+.hero {
     display: flex;
-    list-style-type: none;
-    justify-content: space-between;
-    float:inline-end;
-    flex-direction: row;
+    justify-content: center;
+    padding-top: 3%;
+    padding-bottom: 1%;
+}
+.heroimage {
+    display: flex;
+    width: 200px;
+    height: 196.534px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 196.534px;
+    background: url(<path-to-image>), lightgray -50.635px 0px / 144% 100% no-repeat;
+    box-shadow: 0px 0.975px 0.975px 0px rgba(0, 0, 0, 0.25);
+}
+
+.text {
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 15%;
+}
+
+
+
+
+footer {
+    background: rgba(255, 203, 116, 0.20);
+    width: 100%;
+    height: 15%;
+    flex-shrink: 0;
     
 }
+.quote {
+    color: #000;
+font-family: Jacques Francois;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 1px;
+text-transform: capitalize;
+}
+.email-address {
+    color: var(--F7B318, #F7B318);
+font-family: Jacques Francois;
+font-size: 28px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 1.4px;
+text-transform: capitalize;
+}
+.linkedin {
+    width: auto;
+    height: auto;
+    flex-shrink: 0;
+    padding: 0%;
 
+}
 
+*,
+  *::before,
+  *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
