--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,40 @@
-header {
-    display: flex;
+body {
+    background-color: rgba(255, 203, 116, 0.2);
+}
+.navbar {
+    grid-area: nav;
+    display:flex;
+    align-items: center;
     background-color:rgba(255, 203, 116, 0.2);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset, 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
 }
-
-body { 
-    background-color: rgba(255, 203, 116, 0.2);
-    width: 100%;
-    height:fit-content;
+.name {
+    color: #000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Jacques Francois;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 1.4px;
+    text-transform: capitalize;
+    text-decoration: none;
+    padding-left: 35px;
 }
-.inline-block-and-logo {
-    display: inline;
-    list-style-type: none;
+.rainbowlogo {
+    padding-left: 9px;
 }
-.topnavli {
-    display: inline;
-
+nav {
+    flex:1;
+    text-align: right;
+    padding-right: 35px;
 }
-
-
-a {
+nav ul li {
+    display: inline-block;
+    margin-left: 20px;
+}
+nav ul li a {
+    text-decoration: none;
     color: #000;
     font-family: Jacques Francois;
     font-size: 20px;
@@ -29,16 +43,7 @@ a {
     line-height: normal;
     letter-spacing: 1px;
     text-transform: capitalize;
-    text-decoration: none;
 }
-
-a:link {
-    text-decoration: none;
-}
-li {
-    list-style-type: none;
-}
-
 .hero {
     display: flex;
     justify-content: center;
@@ -48,59 +53,74 @@ li {
 .heroimage {
     display: flex;
     width: 200px;
-    height: 196.534px;
+    height: 200px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    border-radius: 196.534px;
+    border-radius: 198px;
     background: url(<path-to-image>), lightgray -50.635px 0px / 144% 100% no-repeat;
     box-shadow: 0px 0.975px 0.975px 0px rgba(0, 0, 0, 0.25);
 }
 
 .text {
+    color: #000;
     text-align: center;
-    padding-top: 2%;
-    padding-bottom: 15%;
+    font-family: Jacques Francois;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    letter-spacing: 1.8px;
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 158px;
+}
+.footer{
+    background-color: rgba(255, 203, 116, 0.2);
+    width:100%;
+    height:6%;
 }
 
-
-
-
-footer {
-    background: rgba(255, 203, 116, 0.20);
-    width: 100%;
-    height: 15%;
-    flex-shrink: 0;
-    
+.footeritems {
+    display: inline;
+    align-items: center;
+    margin-top: auto;
 }
 .quote {
+    display:flex;
+    margin-top: 5px;
+    margin-left: 20px;
+}
+.footerquote {
     color: #000;
-font-family: Jacques Francois;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 1px;
-text-transform: capitalize;
+    font-family: Jacques Francois;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 1px;
+    text-transform: capitalize;
 }
-.email-address {
-    color: var(--F7B318, #F7B318);
-font-family: Jacques Francois;
-font-size: 28px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 1.4px;
-text-transform: capitalize;
-}
-.linkedin {
-    width: auto;
-    height: auto;
-    flex-shrink: 0;
-    padding: 0%;
 
+.email {
+    color: var(--F7B318, #F7B318);
+    font-family: Jacques Francois;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 1.4px;
+    text-transform: capitalize; 
+    margin-left: 800px;
 }
+.LinkedIn {
+    margin-left: 6px;
+}
+
+
+
+
 
 *,
   *::before,
