--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ body {
     color: #000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: Jacques Francois;
-    font-size: 28px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -74,12 +74,15 @@ nav ul li a {
     letter-spacing: 1.8px;
     text-transform: capitalize;
     text-align: center;
-    margin-bottom: 158px;
+    margin-top: 46px;
+    margin-bottom: 180px;
 }
-.footer{
+.portfoliofooter{
     background-color: rgba(255, 203, 116, 0.2);
     width:100%;
     height:6%;
+    margin-top: 100px;
+    margin-bottom: 0px;
 }
 
 .footeritems {
@@ -112,7 +115,7 @@ nav ul li a {
     line-height: normal;
     letter-spacing: 1.4px;
     text-transform: capitalize; 
-    margin-left: 800px;
+    margin-left: 980px;
 }
 .LinkedIn {
     margin-left: 6px;
@@ -134,3 +137,4 @@ nav ul li a {
     clear: both;
     display: table;
   }
+ 
